# rlzma

./: .gitignore  Cargo.toml
benches/: benchmark.rs
benches/bench_files/: E.coli.lzma  bible.txt.lzma  pi.txt.lzma  world192.txt.lzma
src/: errors.rs  lib.rs  main.rs
src/lzma/: mod.rs
src/lzma/base/: mod.rs
src/lzma/decoder/: constants.rs  internal.rs  mod.rs
src/lzma/encoder/: internal.rs
