[package]
name = "rustlzma"
version = "0.1.0"
authors = ["nathanwhit <nathan.whitaker01@gmail.com>"]
edition = "2018"
exclude = ["c_version/**/*", "cpp_version/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buf_redux = "0.8.4"
thiserror = "1.0.2"
crc32fast = "1.2.0"

log = { version = "0.4.8", optional = true }
env_logger = { version = "0.7.1", optional = true }
rand = { version = "0.7.2", optional = true }

[dev-dependencies]
criterion = "0.3.0"

[features]
# Uses a u32 for probabilities during decoding. This improves performance in some cases,
# at the cost of increased memory usage
prob_u32 = []

debugging = ["log", "env_logger", "rand"]

[profile.release]
debug = true
lto = true

[profile.bench]
lto = true

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false

[[bin]]
name = "rustlzma"
path = "src/main.rs"
bench = false
